--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,12 +13,10 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - uses: Pull Docker image
+    - name: Pull Docker image
       run: sudo docker pull miatian1024/contentedai-fastapi:latest
-
     - name: Delete old docker container
       run: sudo docker rm -f contentedai-fastapi-container || true
-
-    _ name: Run Docker Container
+    - name: Run Docker Container
       run: sudo docker run -d -p 8080:8080 --name contentedai-fastapi-container miatian1024/contentedai-fastapi
    
