--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,5 +18,8 @@ jobs:
     - name: Delete old docker container
       run: sudo docker rm -f contentedai-fastapi-container || true
     - name: Run Docker Container
+      env:
+        OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
       run: sudo docker run -d -p 8080:8080 --name contentedai-fastapi-container miatian1024/contentedai-fastapi
+    
    
