--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,15 @@ name: CI Pipeline
 on:
   push:
     branches: [ "main" ]
-
-env:
-  OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
     
 jobs:
-
   build:
+    environment:
+      name: testing
+    env:
+      OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
 
     steps:
     - uses: actions/checkout@v3
