--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Delete old docker container
       run: sudo docker rm -f contentedai-fastapi-container || true
     - name: Run Docker Container
-      run: sudo docker run -d -p 8000:8000 --name contentedai-fastapi-container miatian1024/contentedai-fastapi
+      run: sudo docker run -d -p 8000:8000 --name contentedai-fastapi-container miatian1024/contentedai-fastapi:latest
     
    
